added flight details cmp

--- a/src/Components/Landing.css
+++ b/src/Components/Landing.css
@@ -1,21 +1,30 @@
 * {
   margin: 0px;
-  padding: 5px;
+  /* padding: 5px; */
 }
+
 body {
   text-align: center;
   justify-content: center;
-  background-color: #000;
+  background-image: url("/public/airplane.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
   color: #fff;
+}
+
+.landing {
+  height: 98vh;
+  border-radius: 3px;
+  padding: 5px 2px;
 }
 
 .heading {
   display: flex;
-  border: 2px solid green;
   max-width: 100%;
   height: 60px;
-  margin: 5px;
-  padding: 2px;
+  margin: 10px;
+  padding: 5px;
   justify-content: space-between;
 }
 
@@ -23,40 +32,84 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 15px;
+}
+.left h4 {
+  margin: 5px;
+}
+
+.left:hover {
+  cursor: pointer;
 }
 
 .right {
   display: flex;
-  border-radius: 5px;
   justify-content: space-between;
   align-items: center;
+}
+
+.icons {
+  margin: 5px;
+  object-fit: contain;
+}
+
+.logicon:hover {
+  background-color: rgba(155, 131, 118, 0.29);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .logicon {
   display: flex;
-  border: 2px solid black;
-  border-radius: 5px;
   justify-content: center;
   align-items: center;
+  outline: none;
+  padding: 5px;
 }
 
 .main-section {
-  height: 40vh;
+  width: 60%;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 2% auto;
+  padding: 5% 0;
+  background-color: #fff;
+  color: #000;
+  border-radius: 20px;
+  opacity: 0.9;
+}
+
+.main-section h3 {
+  font-size: 20px;
+  margin: 0;
+  font-weight: 550;
 }
 
 .sourse-destination {
   display: flex;
+  width: 100%;
+  height: 15vh;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  margin-bottom: 20px;
+  margin: 10px auto;
+  padding: 10px 0;
+}
+
+.sourse-destination input {
+  margin: 10px;
+}
+
+.main-section p {
+  margin-top: -10px;
 }
 
 .flight-specific {
-  margin-bottom: 20px;
+  width: 100%;
+  margin-bottom: 40px;
 }
 
 .btn {
@@ -68,4 +121,37 @@ body {
   border: none;
   border-radius: 16px;
   cursor: pointer;
+}
+
+.searchdata {
+  margin: 30px auto;
+  width: 40%;
+  height: 18vh;
+  border: 2px solid black;
+  border-radius: 10px;
+  background-color: rgba(37, 110, 141, 0.683);
+  background: transparent;
+  display: flex;
+  flex-direction: column;
+  color: black;
+  cursor: pointer;
+}
+
+.details {
+  display: flex;
+  width: 70%;
+  margin: 4px auto;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.details p {
+  font-size: 18px;
+  font-weight: 600;
+  margin: 0.001rem auto;
+}
+
+::placeholder {
+  font-size: 10px;
+  font-weight: 600;
 }
