--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -1,14 +1,14 @@
-.container {
+.log-container {
   background: transparent;
-  width: 100%;
+  width: 90%;
   height: auto;
 }
-.box {
+.log-box {
   width: 40%;
   height: auto;
   border-radius: 10px;
-  margin: 8% auto;
-  padding: 5% 0;
+  margin: 12% auto;
+  padding: 2% 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -20,7 +20,8 @@
 .home {
   display: flex;
   justify-content: flex-start;
-  margin-left: 10%;
+  margin-left: 5%;
+  /* margin-bottom: ; */
 }
 
 .home:hover {
@@ -30,7 +31,7 @@
 input {
   width: 240px;
   height: 20px;
-  margin-top: 5px;
+  margin-top: 20px;
   background-color: transparent;
   border: none;
   border-bottom: 2px solid #000;
@@ -46,7 +47,9 @@ input:hover {
 ::placeholder {
   color: #000;
   font-size: 12px;
+  font-weight: 400;
 }
+
 h2 {
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
@@ -57,6 +60,16 @@ h2 {
   transform: translate(-30px);
   text-decoration-line: none;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 10px;
+  font-size: 14px;
   cursor: pointer;
 }
+
+.log-login-btns {
+  padding-top: 10%;
+  margin-left: 30%;
+  display: flex;
+  align-items: center;
+  width: 60%;
+  cursor: pointer;
+}
+
