--- a/src/Components/Signup.css
+++ b/src/Components/Signup.css
@@ -1,9 +1,23 @@
 .register {
-  padding: 5%;
-  padding-top: 7%;
+  padding: 1%;
+  padding-top: 1%;
   font-family: arial;
   font-size: 25px;
   font-weight: bold;
+}
+
+.sign-box {
+  width: 35%;
+  height: auto;
+  border-radius: 10px;
+  margin: 6% auto;
+  padding: 2% 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-color: #fff;
+  color: #000;
+  opacity: 0.9;
 }
 input {
   background: transparent;
@@ -20,12 +34,17 @@ input {
   background-color: #ffffff;
 }
 div.text {
-  padding-top: 11%;
+  padding-top: 5%;
 }
-div.login-btns {
-  padding-top: 12%;
+.login-btns {
+  padding-top: 10%;
+  margin-left: 30%;
+  display: flex;
+  align-items: center;
+  width: 50%;
+  cursor: pointer;
 }
-.login-btns a {
+.login-btns p {
   margin-left: 20px;
 }
 
@@ -34,5 +53,5 @@ div.login-btns {
   transform: translate(-30px);
   text-decoration-line: none;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 10px;
+  font-size: 14px;
 }
