--- a/src/Components/Weatherdetails.css
+++ b/src/Components/Weatherdetails.css
@@ -1,33 +1,34 @@
 .weatherdetails {
-  border: 2px solid green;
+  border: 2px solid rgb(226, 237, 226);
   border-radius: 5px;
   height: 50vh;
-  width: 40%;
-  margin: auto;
-  background: black;
-  box-shadow: inset;
+  width: 80%;
+  margin: 15px auto;
+  box-shadow: 3px 3px 2px rgb(5, 80, 106);
+  align-items: center;
 }
 
-.weatherdetails h2{
-    color: white;
-    font-size: 25px;
-    font-weight: 400;
-    margin: 5px;
+.weatherdetails h2 {
+  color: black;
+  font-size: 25px;
+  font-weight: 400;
+  margin: 3px;
 }
+
 .coords {
   border-radius: 5px;
-  margin: 10px auto;
+  margin: 5px auto;
 }
 
 .weatherdata {
   display: flex;
   justify-content: space-between;
-  margin: 10px 20px;
-  padding: 15px;
+  margin: 10px 15px;
+  padding: 8px;
   align-items: center;
 }
 
-.detail{
+.detail {
   flex-direction: column;
 }
 
@@ -41,15 +42,18 @@
   margin: 2px;
 }
 
-.status{
+.status {
   display: flex;
+  margin: auto;
+  align-items: center;
   margin: auto;
 }
 
 .status p {
-  margin: 3px;
+  margin: 3px 30px;
 }
 
-.weatherdetails p{
-    color: white;
+.weatherdetails p {
+  color: black;
 }
+
