--- a/src/Components/Flightdetails.css
+++ b/src/Components/Flightdetails.css
@@ -1,6 +1,8 @@
 .flightdetails {
+  position: absolute;
   margin: auto;
   min-height: 96vh;
+  width: 99.6%;
   padding: 2px;
   border-radius: 5px;
   opacity: 0.9;
@@ -50,7 +52,7 @@
   margin: 5px auto;
   min-width: none;
   padding: 5px;
-  min-height: 88.7vh;
+  min-height: 90.61vh;
   background-color: aliceblue;
 }
 
